fix: z-index

--- a/src/app.css
+++ b/src/app.css
@@ -488,6 +488,10 @@
     transition-duration: 150ms;
 }
 
+.main-view-container {
+    z-index: 1;
+}
+
 .hover\:underline:hover {
     text-decoration-line: underline;
 }
